# OpenTeleprompter

./: .dv-state.json  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  Trunk.toml  index.html
.github/workflows/: ci.yml  release.yml
docs/: frontend-testing.md  install.md  portable-readme.txt  release.md  screenshot-safety.md
e2e/: .gitignore  README.md  package.json  wdio.conf.js
e2e/cdp/: README.md  regression.mjs
e2e/test/specs/: prompter.e2e.js  smoke.e2e.js
examples/: README.md
examples/scripts/: conference_keynote.txt  welcome_demo.txt
scripts/: .gitignore  assemble-latest-json.sh  check.ps1  check.sh  updater-fragment.sh
src/: app.rs  component_tests.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/adapters/: dialog.rs  document.rs  file_system.rs  mod.rs
src-tauri/src/commands/: import_export.rs  mod.rs  playback_state.rs  scripts.rs  settings.rs  system.rs  updater.rs
src-tauri/src/domain/: errors.rs  mod.rs  playback.rs  playback_state.rs  script.rs  settings.rs
src-tauri/src/persistence/: database.rs  migrations.rs  mod.rs  playback_state_repository.rs  script_repository.rs  settings_repository.rs
src-tauri/src/services/: import_export_service.rs  mod.rs  playback_state_service.rs  script_service.rs  settings_service.rs
src-tauri/tests/: document_import_tests.rs  domain_tests.rs  full_flow_tests.rs  import_export_tests.rs  persistence_tests.rs
src/bindings/: app_api.rs  mock_api.rs  mod.rs  tauri_api.rs
src/components/: app_shell.rs  confirm_modal.rs  mod.rs  prompter_view.rs  script_editor.rs  script_library.rs  settings_panel.rs  sidebar.rs  toolbar.rs  update_banner.rs
src/prompter/: engine.rs  keyboard.rs  mirror.rs  mod.rs  speed.rs
src/state/: app_state.rs  mod.rs  playback_state.rs  toast.rs  ui_state.rs
wiki/: 00-index.md  01-architecture.md  02-test-tree.md  03-phases.md  04-decisions.md  05-glossary.md  06-open-threads.md
