[package]
name = "openprompter-rs-tauri"
version = "0.9.0"
edition = "2021"

[lib]
name = "openprompter_rs_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
tempfile = "3"
