[package]
name = "openprompter-rs-tauri"
version = "1.1.3"
edition = "2021"

[lib]
name = "openprompter_rs_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
# Document import (pdf / docx / markdown -> plain text)
pdf-extract = "0.7"
zip = "2"
quick-xml = "0.36"
regex = "1"

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
tempfile = "3"
